--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -550,10 +550,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Set: 96\n",
+      "Test Set: 53\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "> predict='setosa', actual='virginica'\n",
+      "Accuracy: 0.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mainFunction():\n",
+    "    training = []\n",
+    "    test = []\n",
+    "    split = 0.65\n",
+    "    loadingdataset('iris.txt', split, training, test)\n",
+    "    print('Train Set: ' + repr(len(training)))\n",
+    "    print('Test Set: ' + repr(len(test)))\n",
+    "    \n",
+    "    predict = []\n",
+    "    k = 3\n",
+    "    \n",
+    "    for X in range(len(test)):\n",
+    "        neighbors = Neighbors(training, test[X], k)\n",
+    "        res = Response(neighbors)\n",
+    "        predict.append(res)\n",
+    "        print('> predict=' + repr(res) + ', actual=' + repr(test[X][-1]))\n",
+    "    accuracy = Accuracy(test, predict)\n",
+    "    print('Accuracy: ' + repr(accuracy) + '%')\n",
+    "    \n",
+    "mainFunction()"
+   ]
   }
  ],
  "metadata": {
