--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -399,8 +399,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train: 89\n",
-      "Test: 60\n"
+      "Train: 99\n",
+      "Test: 50\n"
      ]
     }
    ],
@@ -456,7 +456,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distance is3.0\n"
+      "Distance is 3.0\n"
      ]
     }
    ],
@@ -598,8 +598,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Set: 104\n",
-      "Test Set: 45\n",
+      "Train Set: 99\n",
+      "Test Set: 50\n",
       "> predict='setosa', actual='setosa'\n",
       "> predict='setosa', actual='setosa'\n",
       "> predict='setosa', actual='setosa'\n",
@@ -615,6 +615,11 @@
       "> predict='setosa', actual='setosa'\n",
       "> predict='setosa', actual='setosa'\n",
       "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
+      "> predict='setosa', actual='setosa'\n",
       "> predict='setosa', actual='versicolor'\n",
       "> predict='setosa', actual='versicolor'\n",
       "> predict='setosa', actual='versicolor'\n",
@@ -632,7 +637,7 @@
       "> predict='setosa', actual='versicolor'\n",
       "> predict='setosa', actual='versicolor'\n",
       "> predict='setosa', actual='versicolor'\n",
-      "> predict='setosa', actual='versicolor'\n",
+      "> predict='setosa', actual='virginica'\n",
       "> predict='setosa', actual='virginica'\n",
       "> predict='setosa', actual='virginica'\n",
       "> predict='setosa', actual='virginica'\n",
